<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.8.RELEASE</version>
    </parent>

    <groupId>io.terminus</groupId>
    <artifactId>dalaran-parent</artifactId>
    <packaging>pom</packaging>
<version>2.2.3.RELEASE</version>

    <modules>
        <module>core</module>
        <module>components</module>
        <module>camel-components</module>
        <module>console</module>
        <module>runtime</module>
        <module>sdk</module>
        <module>api</module>
        <module>model</module>
        <module>client</module>
    </modules>

    <properties>
        <camel.version>2.24.2</camel.version>
        <dubbo.version>2.6.2</dubbo.version>
        <rocketmq.version>4.5.2</rocketmq.version>
        <mysql.connector.version>5.1.47</mysql.connector.version>
        <spring.cloud.version>2.1.3.RELEASE</spring.cloud.version>
        <!--camel property-->
        <javax.servlet-api-version>3.1.0</javax.servlet-api-version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.2</version>
            </dependency>
            <dependency>
                <groupId>org.apache.camel</groupId>
                <artifactId>camel-spring-boot-dependencies</artifactId>
                <version>${camel.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>java-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>java-test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>terminus</id>
            <name>terminus release repository</name>
            <url>https://repo.terminus.io/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>terminus</id>
            <name>terminus snapshot repository</name>
            <url>https://repo.terminus.io/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

</project>